there is error on page

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-phone-input-2": "^2.15.1",
+    "react-quill-new": "^3.7.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.5.1",
     "redux-saga": "^1.4.2",
