--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.9",
     "lucide-react": "^0.553.0",
+    "moment": "^2.30.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
